--- a/Project_sem_3/Project_sem_3.csproj
+++ b/Project_sem_3/Project_sem_3.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\AccoutRoleController.cs" />
+    <Compile Include="Controllers\ContractController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HomeInsuranceController.cs" />
     <Compile Include="Controllers\MedicalInsuranceController.cs" />
@@ -246,7 +247,6 @@
     <Content Include="Views\MedicalInsurance\Information.cshtml" />
     <Content Include="Views\MedicalInsurance\Order.cshtml" />
     <Content Include="Views\Accounts\Login.cshtml" />
-
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
