--- a/Project_sem_3/Web.config
+++ b/Project_sem_3/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Project_sem_3-20200311114319.mdf;Initial Catalog=aspnet-Project_sem_3-20200311114319;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="MyDbContext" connectionString="Server=tcp:210.245.95.62,1433;Initial Catalog=T1808A_TH1807036_NGUYENVANDAT_Identity;User ID=sa;Password=z@GH7ytQ;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
