--- a/Project_sem_3/Web.config
+++ b/Project_sem_3/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="MyDbContext" connectionString="Server=tcp:210.245.95.62,1433;Initial Catalog=T1808A_TH1807036_NGUYENVANDAT_Identity;User ID=sa;Password=z@GH7ytQ;Connection Timeout=30;" providerName="System.Data.SqlClient" />
 
-  </connectionStrings>
+  <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Project_sem_3.Models.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model7" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Project_sem_3.Models.Model7;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model8" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Project_sem_3.Models.Model8;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
