--- a/Project_sem_3/Project_sem_3.csproj
+++ b/Project_sem_3/Project_sem_3.csproj
@@ -191,25 +191,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202003170920552_role2.cs" />
-    <Compile Include="Migrations\202003170920552_role2.Designer.cs">
-      <DependentUpon>202003170920552_role2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003171003516_s.cs" />
-    <Compile Include="Migrations\202003171003516_s.Designer.cs">
-      <DependentUpon>202003171003516_s.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003180648041_r.cs" />
-    <Compile Include="Migrations\202003180648041_r.Designer.cs">
-      <DependentUpon>202003180648041_r.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003161003157_insurance.cs" />
-    <Compile Include="Migrations\202003161003157_insurance.Designer.cs">
-      <DependentUpon>202003161003157_insurance.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003161737374_addStatus.cs" />
-    <Compile Include="Migrations\202003161737374_addStatus.Designer.cs">
-      <DependentUpon>202003161737374_addStatus.cs</DependentUpon>
+    <Compile Include="Migrations\202003180720474_tt.cs" />
+    <Compile Include="Migrations\202003180720474_tt.Designer.cs">
+      <DependentUpon>202003180720474_tt.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -2309,6 +2293,7 @@
     <Content Include="Areas\Admin\Views\Role\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Role\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Role\CreateAdmin.cshtml" />
+    <Content Include="Areas\Admin\Views\Role\UsersWithRoles.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\ckeditor\adapters\jquery.js" />
     <Content Include="Scripts\ckeditor\ckeditor.js" />
@@ -2714,7 +2699,6 @@
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\LifeInsurance\Order.cshtml" />
-
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2731,20 +2715,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202003170920552_role2.resx">
-      <DependentUpon>202003170920552_role2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003171003516_s.resx">
-      <DependentUpon>202003171003516_s.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003180648041_r.resx">
-      <DependentUpon>202003180648041_r.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003161003157_insurance.resx">
-      <DependentUpon>202003161003157_insurance.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003161737374_addStatus.resx">
-      <DependentUpon>202003161737374_addStatus.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202003180720474_tt.resx">
+      <DependentUpon>202003180720474_tt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
