--- a/Project_sem_3/Project_sem_3.csproj
+++ b/Project_sem_3/Project_sem_3.csproj
@@ -195,10 +195,13 @@
     <Compile Include="Migrations\202003180720474_tt.Designer.cs">
       <DependentUpon>202003180720474_tt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003200824576_deletecus.cs" />
+    <Compile Include="Migrations\202003200824576_deletecus.Designer.cs">
+      <DependentUpon>202003200824576_deletecus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contract.cs" />
-    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MedicalInsurance.cs" />
     <Compile Include="Models\HouseInsurance.cs" />
@@ -209,9 +212,7 @@
     <Compile Include="Models\MotorCartItem.cs" />
     <Compile Include="Models\MotorInsurance.cs" />
     <Compile Include="Models\MotorShopingCart.cs" />
-    <Compile Include="Models\MyDb.cs" />
     <Compile Include="Models\Programme.cs" />
-    <Compile Include="Models\Util.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -2717,6 +2718,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202003180720474_tt.resx">
       <DependentUpon>202003180720474_tt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003200824576_deletecus.resx">
+      <DependentUpon>202003200824576_deletecus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
