chua hoan thien

--- a/Project_sem_3/Web.config
+++ b/Project_sem_3/Web.config
@@ -24,6 +24,7 @@
     <httpRuntime requestValidationMode="2.0" />
     <pages validateRequest="false">
     </pages>
+    <globalization uiCulture="fi" culture="fi"></globalization>
   </system.web>
   <system.webServer>
     <modules>
