--- a/Project_sem_3/Web.config
+++ b/Project_sem_3/Web.config
@@ -27,7 +27,7 @@
     <httpRuntime requestValidationMode="2.0" />
     <pages validateRequest="false">
     </pages>
-    <globalization uiCulture="fi" culture="fi"></globalization>
+    <globalization culture="en-US"/>
   </system.web>
   <system.webServer>
     <modules>
