--- a/Project_sem_3/Project_sem_3.csproj
+++ b/Project_sem_3/Project_sem_3.csproj
@@ -1825,6 +1825,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\contact.html" />
+    <Content Include="Content\dummy\About_1.jpg" />
+    <Content Include="Content\dummy\About_3 %282%29.jpg" />
+    <Content Include="Content\dummy\About_3.jpg" />
+    <Content Include="Content\dummy\About_4.jpg" />
     <Content Include="Content\dummy\bbs-logo%402x.png" />
     <Content Include="Content\dummy\bbs-logo.png" />
     <Content Include="Content\dummy\featured-image-1%402x.jpg" />
@@ -1835,8 +1839,30 @@
     <Content Include="Content\dummy\featured-image-3.jpg" />
     <Content Include="Content\dummy\forbes-logo%402x.png" />
     <Content Include="Content\dummy\forbes-logo.png" />
+    <Content Include="Content\dummy\house.jpeg" />
+    <Content Include="Content\dummy\Index.jpg" />
+    <Content Include="Content\dummy\Index_1.jpg" />
+    <Content Include="Content\dummy\Index_2.jpg" />
+    <Content Include="Content\dummy\Index_5.1.jpg" />
+    <Content Include="Content\dummy\Index_5.2.jpg" />
+    <Content Include="Content\dummy\Index_5.3.jpg" />
+    <Content Include="Content\dummy\Index_5.4.jpg" />
+    <Content Include="Content\dummy\Index_5.5.jpg" />
+    <Content Include="Content\dummy\Index_6.1.1.jpg" />
+    <Content Include="Content\dummy\Index_6.1.2.jpg" />
+    <Content Include="Content\dummy\Index_6.1.jpg" />
+    <Content Include="Content\dummy\Index_6.1.3.jpg" />
+    <Content Include="Content\dummy\Index_6.1.4.jpg" />
+    <Content Include="Content\dummy\Index_6.4.jpg" />
+    <Content Include="Content\dummy\Life.png" />
+    <Content Include="Content\dummy\Life_Order.jpg" />
+    <Content Include="Content\dummy\Medical.jpg" />
+    <Content Include="Content\dummy\Medical_1.jpg" />
     <Content Include="Content\dummy\money-logo%402x.png" />
     <Content Include="Content\dummy\money-logo.png" />
+    <Content Include="Content\dummy\Index_3.jpg" />
+    <Content Include="Content\dummy\motor_Insurance.jpg" />
+    <Content Include="Content\dummy\Motor_Order.jpeg" />
     <Content Include="Content\dummy\nyt-logo%402x.png" />
     <Content Include="Content\dummy\nyt-logo.png" />
     <Content Include="Content\dummy\offer-1%402x.jpg" />
