--- a/Project_sem_3/Web.config
+++ b/Project_sem_3/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MyDbContext" connectionString="Server=tcp:210.245.95.62,1433;Initial Catalog=T1808A_TH1807036_NGUYENVANDAT_Identity;User ID=sa;Password=z@GH7ytQ;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="MyDbContext" connectionString="Server=tcp:210.245.95.62,1433;Initial Catalog=T1808A-Project;User ID=sa;Password=z@GH7ytQ;Connection Timeout=30;" providerName="System.Data.SqlClient" />
 
   <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Project_sem_3.Models.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model7" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Project_sem_3.Models.Model7;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model8" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Project_sem_3.Models.Model8;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
